# azure-stock-market

./: .gitignore  README.md  databricks.yml  log4j.properties  notes.txt  pyproject.toml  requirements.txt  requirements_tree.txt  setup.py  testspark.py
.github/workflows/: build-and-upload-helper-class.yml
Azure storage/Bronze/symbol=QQQ/: part-00003-ce6f59bc-fe8a-47cf-a60c-4e643260fdca.c000.snappy.parquet  part-00003-eca27b08-b6ad-44b9-a6ff-ede7e2b881d3.c000.snappy.parquet
Code/: DDLs.ipynb
Code/Databricks/: ADLSController_class.py  All Commbined.py  GetStockData_class.py  bronze_to_silver.py  nb_common.py  silver_to_gold.py  source_to_bronze.py
Code/Databricks/Bronze/: source_to_bronze.py
Code/Databricks_old/: nb_common.py
Code/PowerBi/: Stock Market Report.Report:memory:.ses  Stock Market Report.pbip
Code/local_development/: DDLs.ipynb  dev_spark_session.py
Local Pyspark/: GetStockData_class.py  access_keyVault.py  test_nb.ipynb
Python Helper/: DDLs.ipynb  dev_spark_session.py  get_stock_data.py  notebook.ipynb  python_helper.py  scd_type2_handler.py  snippets.ipynb  start_thrift_server.py  test.py
Python Helper/Tranformation Notebooks/: Dim_Silver_to_Gold.ipynb  Fact_Silver_to_Gold.ipynb  Raw_to_Silver.ipynb  Silver_to_Gold.ipynb
python_helper/: notebook.ipynb
python_helper/Tranformation Notebooks/: orchestrate.ipynb
python_helper/tranformation_notebooks/: Dim_Silver_to_Gold.py  Fact_Silver_to_Gold.py  Raw_to_Silver.py  Silver_to_Gold.py  orchestrate.py
src/common_stock_classes/: __init__.py  get_stock_data.py  helper_methods.py  scd_type2_handler.py
src/helper_methods_stocks/: __init__.py  get_stock_data.py
tranformation_notebooks/: Dim_Silver_to_Gold.ipynb  Fact_Silver_to_Gold.ipynb  Raw_to_Silver.ipynb  Silver_to_Gold.ipynb  temp_SCDType2Handler.ipynb
(+163 files in other folders)
