[project]
name = "azure-stock-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==2.1.3)",
    "azure-identity (==1.19.0)",
    "azure-keyvault-secrets (==4.9.0)",
    "ipykernel (==6.29.5)",
    "pyspark (==3.4.*)",
    "requests (==2.32.3)",
    "websockets (==14.0)",
    "delta-spark (==2.4.*)",
    "ipython-sql (>=0.5.0,<0.6.0)",
    "pyhive (>=0.7.0,<0.8.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "thrift (>=0.21.0,<0.22.0)",
    "pure-sasl (>=0.6.2,<0.7.0)",
    "thrift-sasl (>=0.4.3,<0.5.0)",
    "prettytable (>=3.16.0,<4.0.0)",
]

[tool.poetry]
name = "azure-stock-market"
version = "0.1.0"
description = ""
authors = ["Andrew_mac <andrewkravchuk97@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
requests = "~2.32.0"
pyspark = "*"
websockets = "^14.0"
ipykernel = "^6.29.5"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"